# CryptoBench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  autogen.sh  detect-drive.sh
BenchmarkRunner/: CMakeLists.txt  byte_tools.hpp  main.cpp  runCryptoBench.sh
Botan-2.13.0/: CMakeLists.txt  README.txt
CipherBenchmarkRunner/: CMakeLists.txt  README.md  byte_tools.hpp
CipherTreeTool/: CMakeLists.txt  TreeMaker.py  cipher_decision_tree.c.template  cipher_decision_tree.cpp.template  cipher_decision_tree.h  cipher_decision_tree.hpp  decision_tree_generator.py  decision_tree_test.cpp  dummy_data.csv  fill_security_filebytes.py  pre_generator.py
EngineBenchmarkRunner/: CMakeLists.txt  README.md  main.cpp
Google_test/: CMakeLists.txt  aes_cipher_test.cpp  botan_cipher_test.cpp  cipher_avalanche_test.cpp  cipher_consistency_test.cpp  cipher_factory_test.cpp  cipher_factory_test.hpp  cryptoengine_test.cpp  cryptopp_cipher_test.cpp  gtest.cpp  hello_world_test.cpp  libgcrypt_cipher_test.cpp  libsodium_cipher_test.cpp  openssl_cipher_test.cpp  wolfcrypt_cipher_test.cpp
cryptoengine/: CMakeLists.txt  cipher_decision_tree.cpp.template  cipher_decision_tree.hpp  cryptoengine.cpp.template  cryptoengine.hpp  decision_tree_generator.py  decision_tree_test.cpp  dummy_data.csv  pre_generator.py
cryptopp-8.2/: CMakeLists.txt
data/: .gitignore  README.md  algorithm-list-noauth-noecb.txt  block_cipher_modes_w.csv  block_cipher_rounds.csv
engine/: engine.cpp  engine.hpp
include/CryptoBench/: aes_cipher.hpp  botan_cipher_factory.hpp  byte_conversions.hpp  cipher_database.hpp  cipher_definitions.hpp  cipher_exception.hpp  cipher_factory.hpp  ciphertext_codec.hpp  ciphertext_fragment.hpp  ciphertext_writer.hpp  cryptopp_cipher_factory.hpp  engine.hpp  file_utilities.hpp  hencrypt.hpp  key_manager.hpp  libgcrypt_cipher_factory.hpp  library.hpp  libsodium_cipher_factory.hpp  open_ssl_cipher_factory.hpp  openssl_cipher.hpp  random_bytes.hpp  secure_string.hpp  symmetric_cipher.hpp  system_info.hpp  wolfcrypt_cipher.hpp  wolfcrypt_cipher_factory.hpp
include/CryptoBench/cipher/: cipher_factory.hpp  cryptopp_cipher_factory.hpp  libgcrypt_cipher_factory.hpp  open_ssl_cipher_factory.hpp  symmetric_cipher.hpp
include/hencrypt/: byte_conversions.hpp  cipher_database.hpp  ciphertext_codec.hpp  ciphertext_fragment.hpp  engine.hpp  file_utilities.hpp  hencrypt.hpp  key_manager.hpp  random_bytes.hpp  system_info.hpp
include/hencrypt/cipher/: botan_cipher_factory.hpp  cipher_definitions.hpp  cipher_exception.hpp  cipher_factory.hpp  cryptopp_cipher_factory.hpp  libgcrypt_cipher_factory.hpp  libsodium_cipher_factory.hpp  open_ssl_cipher_factory.hpp  symmetric_cipher.hpp  wolfcrypt_cipher_factory.hpp
lib/: CMakeLists.txt
lib/Botan-2.13.0/: CMakeLists.txt
lib/Google_test/: CMakeLists.txt
lib/cryptopp-8.2/: CMakeLists.txt  README.txt
lib/libgcrypt-1.8.5/: CMakeLists.txt
lib/libgpg-error-1.37/: CMakeLists.txt
lib/libsodium-1.0.18/: CMakeLists.txt
lib/or-tools/: CMakeLists.txt
lib/wolfSSL-4.3.0/: CMakeLists.txt
libgcrypt-1.8.5/: README.txt
libgpg-error-1.37/: CMakeLists.txt  README.txt
libsodium-1.0.18/: CMakeLists.txt  README.txt
script/: README.md  algorithm-list.txt  cipher-seed-generator.py  combine-benchmarks.py  cp-sat.py  detect-drive.sh  engine-benchmark-comparator.py  engine_benchmark_comparator.py  generate-random-binary.sh  query.py  repeat-benchmark.sh  run-cryptobench.sh  run-engine-cryptobench.sh
src/: CMakeLists.txt  aes_cipher.cpp  botan_cipher_factory.cpp  cipher_database.cpp  cipher_definitions.cpp  cipher_exception.cpp  ciphertext_codec.cpp  ciphertext_writer.cpp  cryptopp_cipher_factory.cpp  engine.cpp  file_utilities.cpp  hencrypt.cpp  key_manager.cpp  libgcrypt_cipher_factory.cpp  libsodium_cipher_factory.cpp  open_ssl_cipher_factory.cpp  openssl_cipher.cpp  symmetric_cipher.cpp  system_info.cpp  wolfcrypt_cipher.cpp  wolfcrypt_cipher_factory.cpp
src/cipher/: botan_cipher_factory.cpp  cipher_definitions.cpp  cipher_exception.cpp  cryptopp_cipher_factory.cpp  libgcrypt_cipher_factory.cpp  libsodium_cipher_factory.cpp  open_ssl_cipher_factory.cpp  wolfcrypt_cipher_factory.cpp
test/: CMakeLists.txt  botan_cipher_test.cpp  cipher_avalanche_test.cpp  cipher_avalanche_test.hpp  cipher_consistency_test.cpp  cipher_database_test.cpp  cipher_factory_test.cpp  cipher_factory_test.hpp  codec_test.cpp  cryptoengine_test.cpp  cryptopp_cipher_test.cpp  engine_test.cpp  gtest.cpp  hello_world_test.cpp  hencrypt_test.cpp  libgcrypt_cipher_test.cpp  library_test.cpp  libsodium_cipher_test.cpp  openssl_cipher_test.cpp  ortools_test.cpp  system_info_test.cpp  wolfcrypt_cipher_test.cpp
wolfSSL-4.3.0/: CMakeLists.txt  README.txt
