cmake_minimum_required(VERSION 3.4.1)
project(cryptopp)

if (CRYPTOPP_NO_OPTS)
    add_definitions(-DNDEBUG -g2 -O3 -fPIC -pthread -pipe
            -DNO_OS_DEPENDENCE
            -DCRYPTOPP_DISABLE_SSE2
            -DCRYPTOPP_DISABLE_SSE4
            -DDCRYPTOPP_DISABLE_SHANI
            -DCRYPTOPP_DISABLE_AESNI
            -DCRYPTOPP_DISABLE_SSSE3
            -DCRYPTOPP_DISABLE_ASM
            -DCRYPTOPP_DISABLE_ALTIVEC)
else()
    add_definitions(-DNDEBUG -g2 -O3 -fPIC -pthread -pipe)
endif()

set(cryptopp_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/cryptopp)
set(cryptopp_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/cryptopp)

add_library(cryptopp STATIC ${cryptopp_DIR}/3way.cpp
        ${cryptopp_DIR}/adhoc.cpp.proto
        ${cryptopp_DIR}/adler32.cpp
        ${cryptopp_DIR}/algebra.cpp
        ${cryptopp_DIR}/algparam.cpp
        ${cryptopp_DIR}/arc4.cpp
        ${cryptopp_DIR}/aria.cpp
        ${cryptopp_DIR}/aria_simd.cpp
        ${cryptopp_DIR}/ariatab.cpp
        ${cryptopp_DIR}/asn.cpp
        ${cryptopp_DIR}/authenc.cpp
        ${cryptopp_DIR}/base32.cpp
        ${cryptopp_DIR}/base64.cpp
        ${cryptopp_DIR}/basecode.cpp
        ${cryptopp_DIR}/bench1.cpp
        ${cryptopp_DIR}/bench2.cpp
        ${cryptopp_DIR}/bench3.cpp
        ${cryptopp_DIR}/bfinit.cpp
        ${cryptopp_DIR}/blake2.cpp
        ${cryptopp_DIR}/blake2b_simd.cpp
        ${cryptopp_DIR}/blake2s_simd.cpp
        ${cryptopp_DIR}/blowfish.cpp
        ${cryptopp_DIR}/blumshub.cpp
        ${cryptopp_DIR}/camellia.cpp
        ${cryptopp_DIR}/cast.cpp
        ${cryptopp_DIR}/casts.cpp
        ${cryptopp_DIR}/cbcmac.cpp
        ${cryptopp_DIR}/ccm.cpp
        ${cryptopp_DIR}/chacha.cpp
        ${cryptopp_DIR}/chacha_avx.cpp
        ${cryptopp_DIR}/chacha_simd.cpp
        ${cryptopp_DIR}/chachapoly.cpp
        ${cryptopp_DIR}/cham.cpp
        ${cryptopp_DIR}/cham_simd.cpp
        ${cryptopp_DIR}/channels.cpp
        ${cryptopp_DIR}/cmac.cpp
        ${cryptopp_DIR}/cpu.cpp
        ${cryptopp_DIR}/crc.cpp
        ${cryptopp_DIR}/crc_simd.cpp
        ${cryptopp_DIR}/cryptlib.cpp
        ${cryptopp_DIR}/darn.cpp
        ${cryptopp_DIR}/datatest.cpp
        ${cryptopp_DIR}/default.cpp
        ${cryptopp_DIR}/des.cpp
        ${cryptopp_DIR}/dessp.cpp
        ${cryptopp_DIR}/dh.cpp
        ${cryptopp_DIR}/dh2.cpp
        ${cryptopp_DIR}/dll.cpp
        ${cryptopp_DIR}/dlltest.cpp
        ${cryptopp_DIR}/donna_32.cpp
        ${cryptopp_DIR}/donna_64.cpp
        ${cryptopp_DIR}/donna_sse.cpp
        ${cryptopp_DIR}/dsa.cpp
        ${cryptopp_DIR}/eax.cpp
        ${cryptopp_DIR}/ec2n.cpp
        ${cryptopp_DIR}/eccrypto.cpp
        ${cryptopp_DIR}/ecp.cpp
        ${cryptopp_DIR}/elgamal.cpp
        ${cryptopp_DIR}/emsa2.cpp
        ${cryptopp_DIR}/eprecomp.cpp
        ${cryptopp_DIR}/esign.cpp
        ${cryptopp_DIR}/files.cpp
        ${cryptopp_DIR}/filters.cpp
        ${cryptopp_DIR}/fips140.cpp
        ${cryptopp_DIR}/fipsalgt.cpp
        ${cryptopp_DIR}/fipstest.cpp
        ${cryptopp_DIR}/gcm.cpp
        ${cryptopp_DIR}/gcm_simd.cpp
        ${cryptopp_DIR}/gf256.cpp
        ${cryptopp_DIR}/gf2_32.cpp
        ${cryptopp_DIR}/gf2n.cpp
        ${cryptopp_DIR}/gf2n_simd.cpp
        ${cryptopp_DIR}/gfpcrypt.cpp
        ${cryptopp_DIR}/gost.cpp
        ${cryptopp_DIR}/gzip.cpp
        ${cryptopp_DIR}/hc128.cpp
        ${cryptopp_DIR}/hc256.cpp
        ${cryptopp_DIR}/hex.cpp
        ${cryptopp_DIR}/hight.cpp
        ${cryptopp_DIR}/hmac.cpp
        ${cryptopp_DIR}/hrtimer.cpp
        ${cryptopp_DIR}/ida.cpp
        ${cryptopp_DIR}/idea.cpp
        ${cryptopp_DIR}/integer.cpp
        ${cryptopp_DIR}/iterhash.cpp
        ${cryptopp_DIR}/kalyna.cpp
        ${cryptopp_DIR}/kalynatab.cpp
        ${cryptopp_DIR}/keccak.cpp
        ${cryptopp_DIR}/keccak_core.cpp
        ${cryptopp_DIR}/keccak_simd.cpp
        ${cryptopp_DIR}/lea.cpp
        ${cryptopp_DIR}/lea_simd.cpp
        ${cryptopp_DIR}/luc.cpp
        ${cryptopp_DIR}/mars.cpp
        ${cryptopp_DIR}/marss.cpp
        ${cryptopp_DIR}/md2.cpp
        ${cryptopp_DIR}/md4.cpp
        ${cryptopp_DIR}/md5.cpp
        ${cryptopp_DIR}/misc.cpp
        ${cryptopp_DIR}/modes.cpp
        ${cryptopp_DIR}/mqueue.cpp
        ${cryptopp_DIR}/mqv.cpp
        ${cryptopp_DIR}/nbtheory.cpp
        ${cryptopp_DIR}/neon_simd.cpp
        ${cryptopp_DIR}/oaep.cpp
        ${cryptopp_DIR}/osrng.cpp
        ${cryptopp_DIR}/padlkrng.cpp
        ${cryptopp_DIR}/panama.cpp
        ${cryptopp_DIR}/pch.cpp
        ${cryptopp_DIR}/pkcspad.cpp
        ${cryptopp_DIR}/poly1305.cpp
        ${cryptopp_DIR}/polynomi.cpp
        ${cryptopp_DIR}/ppc_power7.cpp
        ${cryptopp_DIR}/ppc_power8.cpp
        ${cryptopp_DIR}/ppc_power9.cpp
        ${cryptopp_DIR}/ppc_simd.cpp
        ${cryptopp_DIR}/pssr.cpp
        ${cryptopp_DIR}/pubkey.cpp
        ${cryptopp_DIR}/queue.cpp
        ${cryptopp_DIR}/rabbit.cpp
        ${cryptopp_DIR}/rabin.cpp
        ${cryptopp_DIR}/randpool.cpp
        ${cryptopp_DIR}/rc2.cpp
        ${cryptopp_DIR}/rc5.cpp
        ${cryptopp_DIR}/rc6.cpp
        ${cryptopp_DIR}/rdrand.cpp
        ${cryptopp_DIR}/rdtables.cpp
        ${cryptopp_DIR}/regtest1.cpp
        ${cryptopp_DIR}/regtest2.cpp
        ${cryptopp_DIR}/regtest3.cpp
        ${cryptopp_DIR}/regtest4.cpp
        ${cryptopp_DIR}/rijndael.cpp
        ${cryptopp_DIR}/rijndael_simd.cpp
        ${cryptopp_DIR}/ripemd.cpp
        ${cryptopp_DIR}/rng.cpp
        ${cryptopp_DIR}/rsa.cpp
        ${cryptopp_DIR}/rw.cpp
        ${cryptopp_DIR}/safer.cpp
        ${cryptopp_DIR}/salsa.cpp
        ${cryptopp_DIR}/scrypt.cpp
        ${cryptopp_DIR}/seal.cpp
        ${cryptopp_DIR}/seed.cpp
        ${cryptopp_DIR}/serpent.cpp
        ${cryptopp_DIR}/sha.cpp
        ${cryptopp_DIR}/sha3.cpp
        ${cryptopp_DIR}/sha_simd.cpp
        ${cryptopp_DIR}/shacal2.cpp
        ${cryptopp_DIR}/shacal2_simd.cpp
        ${cryptopp_DIR}/shake.cpp
        ${cryptopp_DIR}/shark.cpp
        ${cryptopp_DIR}/sharkbox.cpp
        ${cryptopp_DIR}/simeck.cpp
        ${cryptopp_DIR}/simeck_simd.cpp
        ${cryptopp_DIR}/simon.cpp
        ${cryptopp_DIR}/simon128_simd.cpp
        ${cryptopp_DIR}/simon64_simd.cpp
        ${cryptopp_DIR}/simple.cpp
        ${cryptopp_DIR}/skipjack.cpp
        ${cryptopp_DIR}/sm3.cpp
        ${cryptopp_DIR}/sm4.cpp
        ${cryptopp_DIR}/sm4_simd.cpp
        ${cryptopp_DIR}/sosemanuk.cpp
        ${cryptopp_DIR}/speck.cpp
        ${cryptopp_DIR}/speck128_simd.cpp
        ${cryptopp_DIR}/speck64_simd.cpp
        ${cryptopp_DIR}/square.cpp
        ${cryptopp_DIR}/squaretb.cpp
        ${cryptopp_DIR}/sse_simd.cpp
        ${cryptopp_DIR}/stdcpp.h
        ${cryptopp_DIR}/strciphr.cpp
        ${cryptopp_DIR}/tea.cpp
        ${cryptopp_DIR}/test.cpp
        ${cryptopp_DIR}/tftables.cpp
        ${cryptopp_DIR}/threefish.cpp
        ${cryptopp_DIR}/tiger.cpp
        ${cryptopp_DIR}/tigertab.cpp
        ${cryptopp_DIR}/ttmac.cpp
        ${cryptopp_DIR}/tweetnacl.cpp
        ${cryptopp_DIR}/twofish.cpp
        ${cryptopp_DIR}/validat0.cpp
        ${cryptopp_DIR}/validat1.cpp
        ${cryptopp_DIR}/validat10.cpp
        ${cryptopp_DIR}/validat2.cpp
        ${cryptopp_DIR}/validat3.cpp
        ${cryptopp_DIR}/validat4.cpp
        ${cryptopp_DIR}/validat5.cpp
        ${cryptopp_DIR}/validat6.cpp
        ${cryptopp_DIR}/validat7.cpp
        ${cryptopp_DIR}/validat8.cpp
        ${cryptopp_DIR}/validat9.cpp
        ${cryptopp_DIR}/vmac.cpp
        ${cryptopp_DIR}/wake.cpp
        ${cryptopp_DIR}/whrlpool.cpp
        ${cryptopp_DIR}/xed25519.cpp
        ${cryptopp_DIR}/xtr.cpp
        ${cryptopp_DIR}/xtrcrypt.cpp
        ${cryptopp_DIR}/zdeflate.cpp
        ${cryptopp_DIR}/zinflate.cpp
        ${cryptopp_DIR}/zlib.cpp)

target_include_directories(cryptopp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib
        DESTINATION ${cryptopp_PREFIX}/include
        FILES_MATCHING PATTERN "*.h*")

INSTALL(TARGETS cryptopp
        ARCHIVE DESTINATION ${cryptopp_PREFIX}/obj
        LIBRARY DESTINATION ${cryptopp_PREFIX}/lib
        PUBLIC_HEADER DESTINATION ${cryptopp_PREFIX}/include
        )